--- a/pages/rules/rules.css
+++ b/pages/rules/rules.css
@@ -12,12 +12,14 @@
   align-items: center;
   gap: 10px;
 }
+/* STYLE TO CENTER CONTAINER  */
 .center-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 600px;
 }
+/* RULES CONTAINER STYLE  */
 .rules-container {
   margin: 1rem;
   display: flex;
