--- a/pages/result/result.css
+++ b/pages/result/result.css
@@ -10,7 +10,7 @@
   margin: 0;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.625rem;
 }
 /* CENTER CONTAINER  */
 .center-container {
@@ -27,7 +27,7 @@
 }
 /* EVERY ARTICLE IN CONTAINER GIVEN MARGIN  */
 .summary-container > * {
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 /* PROFILE CARD STYLE  */
 .profile-card {
@@ -37,15 +37,15 @@
   justify-content: space-between;
 }
 .share-icon {
-  padding: 10px;
+  padding: 0.625rem;
 }
 /* ACCURACY CARD STYLE  */
 .accuracy-title {
-  padding: 10px;
+  padding: 0.625rem;
 }
 .accuracy-bar {
-  background-color: green;
-  margin: 10px;
+  background-color: var(--success-color);
+  margin: 0.625rem;
   border-radius: 5px;
   position: relative;
   height: 1.5rem;
@@ -59,7 +59,7 @@
 }
 .score {
   display: flex;
-  padding: 10px;
+  padding: 0.625rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -72,8 +72,8 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(230px, 1fr));
   grid-template-rows: repeat(2, minmax(90px, 1fr));
-  margin: 10px;
-  gap: 10px;
+  margin: 0.625rem;
+  gap: 0.625rem;
 }
 .performance-card-container {
   width: 100%;
@@ -100,7 +100,6 @@
 .streak-card {
   background-image: url('../../assets/513726_black_element_fire_icon.svg');
   background-repeat: no-repeat;
-  /* background-position: -20px 10px; */
   background-size: 200px;
   background-position: -60px -30px;
 }
@@ -121,11 +120,12 @@
 .correct-answer {
   background-color: var(--success-color);
 }
+/* MEDIA QUERY  */
 @media (max-width: 500px) {
   .grid-layout {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, minmax(90px, 1fr));
-    margin: 10px;
-    gap: 10px;
+    margin: 0.625rem;
+    gap: 0.625rem;
   }
 }
